bug(integration): Wrong position for warning icon on steps in IVP

--- a/app/ui/src/app/integration/edit-page/flow-view/flow-view-step.component.scss
+++ b/app/ui/src/app/integration/edit-page/flow-view/flow-view-step.component.scss
@@ -96,6 +96,10 @@
       width: 32px;
     }
 
+    &:not(.not-connection) + .data-mismatch {
+      transform: translate(25%, -25%);
+    }
+
     .connection-icon {
       height: 24px;
       margin-top: 1px;
@@ -140,7 +144,6 @@
     cursor: pointer;
     top: 0;
     right: 0;
-    transform: translate(25%, -25%);
 
     &::before {
       color: $color-pf-white;
